Added ApiVersion for Azure to configuration file

--- a/YCNBot/appsettings.json
+++ b/YCNBot/appsettings.json
@@ -26,5 +26,6 @@
   "AllowPersonalMode": "false",
   "OpenAIBaseUrl": "https://api.openai.com/v1/",
   "AzureOpenAIBaseUrl": "<azure_endpoint_base>",
-  "ChatCompletionType": "AzureOpenAI"
+  "ChatCompletionType": "AzureOpenAI",
+  "AzureApiVersion": "2023-03-15-preview"
 }
