Added AzureModelDeploymentName to config file

--- a/YCNBot/appsettings.json
+++ b/YCNBot/appsettings.json
@@ -27,5 +27,6 @@
   "OpenAIBaseUrl": "https://api.openai.com/v1/",
   "AzureOpenAIBaseUrl": "<azure_endpoint_base>",
   "ChatCompletionType": "AzureOpenAI",
-  "AzureApiVersion": "2023-03-15-preview"
+  "AzureApiVersion": "2023-03-15-preview",
+  "AzureModelDeploymentName": "chatgpt3"
 }
