--- a/YCNBot/appsettings.json
+++ b/YCNBot/appsettings.json
@@ -21,7 +21,7 @@
   },
   "ChatModel": "gpt-4",
   "PageSize": 100,
-  "KeyVaultName": "<azure_keyvault_name>",
+  "AzureKeyVaultUri": "<azure_key_vault_uri>",
   "AzureADCertThumbprint": "<cert_thumbprint>",
   "AllowPersonalMode": "false",
   "OpenAIBaseUrl": "https://api.openai.com/v1/",
